Added Admin actions for members
